<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL" Id="{8be29a55-f95b-0019-032e-27be63ad623d}">
    <Declaration><![CDATA[
VAR_GLOBAL
   {attribute 'pytmc' := '
    pv: @(PREFIX)Arbiter:01
    '}
	g_fbArbiter1	:	FB_Arbiter(25);

	ReqBP	:	ST_BeamParams; //Currently the placeholder for the fully arbitrated BP set
	
	//Example implementation of the FFO
    
    {attribute 'pytmc' := '
    pv: @(PREFIX)FFO:01
    '}
	{attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO]^Channel 1^Output'}
	g_FastFaultOutput1	:	FB_HardwareFFOutput;
    
	g_rTestingVelocity	:	LREAL := PMPS_GVL.VISIBLE_TEST_VELOCITY;
    
    AttemptReset    :   BOOL; // For testing
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>